tests/data/validations/exportto/cns/dr_bookinfo1_to_2_3.yaml
apiVersion: "networking.istio.io/v1beta1"
kind: "DestinationRule"
metadata:
  name: "dr_bookinfo1_to_2_3"
  namespace: "bookinfo"
spec:
  host: "*.local"
  exportTo:
    - bookinfo2
    - bookinfo3
