tests/data/validations/exportto/cns/dr_bookinfo1_to_this.yaml
apiVersion: "networking.istio.io/v1"
kind: "DestinationRule"
metadata:
  name: "dr_bookinfo1_to_this"
  namespace: "bookinfo"
spec:
  host: "*.local"
  exportTo:
  - .
