tests/data/validations/exportto/cns/dr_bookinfo2_to_1.yaml
apiVersion: "networking.istio.io/v1"
kind: "DestinationRule"
metadata:
  name: dr_bookinfo2_to_1
  namespace: bookinfo2
spec:
  host: "*.local"
  exportTo:
  - bookinfo
