tests/data/validations/exportto/cns/dr_bookinfo2_to_this.yaml
apiVersion: "networking.istio.io/v1"
kind: "DestinationRule"
metadata:
  name: dr_bookinfo2_to_this
  namespace: bookinfo2
spec:
  host: "*.local"
  exportTo:
  - .
