tests/data/validations/exportto/cns/dr_bookinfo3.yaml
apiVersion: "networking.istio.io/v1beta1"
kind: "DestinationRule"
metadata:
  name: dr_bookinfo3
  namespace: bookinfo3
spec:
  host: "*.local"
