tests/data/validations/exportto/cns/dr_bookinfo3_to_2.yaml
apiVersion: "networking.istio.io/v1beta1"
kind: "DestinationRule"
metadata:
  name: dr_bookinfo3_to_2
  namespace: bookinfo3
spec:
  host: "*.local"
  exportTo:
    - bookinfo2
