tests/data/validations/exportto/cns/dr_bookinfo3_to_all.yaml
apiVersion: "networking.istio.io/v1"
kind: "DestinationRule"
metadata:
  name: dr_bookinfo3_to_all
  namespace: bookinfo3
spec:
  host: "*.local"
  exportTo:
  - '*'
