tests/data/validations/exportto/cns/dr_bookinfo3_to_wrong.yaml
apiVersion: "networking.istio.io/v1beta1"
kind: "DestinationRule"
metadata:
  name: dr_bookinfo3_to_wrong
  namespace: bookinfo3
spec:
  host: "*.local"
  exportTo:
    - 'wrong'
