tests/data/validations/exportto/cns/se_bookinfo1_to_this.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: se_bookinfo1_to_this
  namespace: bookinfo
spec:
  hosts:
  - www.googleapis.com
  exportTo:
  - .
