tests/data/validations/exportto/cns/se_bookinfo2_to_this.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: se_bookinfo2_to_this
  namespace: bookinfo2
spec:
  hosts:
    - www.googleapis.com
  exportTo:
    - .
