tests/data/validations/exportto/cns/se_bookinfo3_to_2.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: se_bookinfo3_to_2
  namespace: bookinfo3
spec:
  hosts:
  - www.googleapis.com
  exportTo:
  - bookinfo2
