tests/data/validations/exportto/cns/se_bookinfo3_to_wrong.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: se_bookinfo3_to_wrong
  namespace: bookinfo3
spec:
  hosts:
  - www.googleapis.com
  exportTo:
  - 'wrong'
