tests/data/validations/exportto/cns/vs_bookinfo1_not_exported.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1
metadata:
  name: vs_bookinfo1_not_exported
  namespace: bookinfo
spec:
  hosts:
  - '*'
