tests/data/validations/exportto/cns/vs_bookinfo1_to_2_3.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: vs_bookinfo1_to_2_3
  namespace: bookinfo
spec:
  hosts:
    - '*'
  exportTo:
    - bookinfo2
    - bookinfo3
