tests/data/validations/exportto/cns/vs_bookinfo1_to_this.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: vs_bookinfo1_to_this
  namespace: bookinfo
spec:
  hosts:
    - '*'
  exportTo:
    - .
