tests/data/validations/exportto/cns/vs_bookinfo2_to_1.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: vs_bookinfo2_to_1
  namespace: bookinfo2
spec:
  hosts:
    - '*'
  exportTo:
    - bookinfo
