tests/data/validations/exportto/cns/vs_bookinfo3.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: vs_bookinfo3
  namespace: bookinfo3
spec:
  hosts:
    - '*'
