tests/data/validations/exportto/cns/vs_bookinfo3_to_all.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: vs_bookinfo3_to_all
  namespace: bookinfo3
spec:
  hosts:
    - '*'
  exportTo:
    - '*'
